# Tablo

./: .gitignore  LICENSE  README.md  Tablo Language Reference.md  Tablo Object File Format.md
Examples/: basic.tablo
Rust/: Cargo.toml
Rust/src/: ast.rs  builtins.rs  bytecode.rs  compiler.rs  completion.rs  debugger.rs  diagnostics.rs  format_string.rs  lexer.rs  lib.rs  main.rs  object_file.rs  parser.rs  query.rs  runtime_config.rs  schema.rs  schema_fixture.rs  source.rs  utils.rs  value.rs  vm.rs
Rust/src/semantic/: analyzer.rs  mod.rs  scope.rs  ssa.rs
Rust/src/syntax/: lexer.rs  parser.rs  token.rs
VSCode/: .vscodeignore  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
VSCode/src/: extension.ts  log.ts
VSCode/src/debug/: index.ts  paths.ts  tabloCompiler.ts  tabloDebugAdapterDescriptorFactory.ts  tabloDebugAdapterTrackerFactory.ts  tabloDebugConfigurationProvider.ts
VSCode/src/language/: README.md  completion.ts  index.ts  lsp.ts
VSCode/syntaxes/: tablo.tmLanguage.json
