[package]
name = "tabloc"
version = "0.1.0"
edition = "2024"

[lib]
name = "tablo"
path = "src/lib.rs"

[[bin]]
name = "tabloc"
path = "src/bin/tabloc.rs"

[[bin]]
name = "tablo"
path = "src/bin/tablo.rs"

[[bin]]
name = "tablodbg"
path = "src/bin/tablodbg.rs"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
colored = "3"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
